@@ -20,6 +20,7 @@ Now
   - Add type optimization.
   - Move functions to base GP folder.
   - Remove ADF from generated objects.
+  - Optimize %0 as returning LIST.
 
 Version 0.0.5 2012-09-05
  - Support for C++0x (GCC 4.5.3)
